remove enable-native-access arg
Signed-off-by: Uday Bhaskar <udabhas@amazon.com>