@@ -78,9 +78,6 @@ test {
         showStandardStreams = true
     }
     systemProperty 'tests.security.manager', 'false'
-    jvmArgs += [
-        '--enable-native-access=ALL-UNNAMED'
-    ]
 }
 
 tasks.named('internalClusterTest').configure {
@@ -90,13 +87,6 @@ tasks.named('internalClusterTest').configure {
         events "passed", "skipped", "failed"
         showStandardStreams = true
     }
-    jvmArgs += [
-        '--enable-native-access=ALL-UNNAMED'
-    ]
-}
-
-tasks.named("yamlRestTest").configure {
-    jvmArgs += "--enable-native-access=ALL-UNNAMED"
 }
 
 compileJava {
